--- a/Kursova/Views/Product/Create.cshtml
+++ b/Kursova/Views/Product/Create.cshtml
@@ -27,7 +27,7 @@
                         <span class="input-group-text bg-primary">
                             <i class="bi bi-tag text-white"></i>
                         </span>
-                        <input asp-for="price" placeholder="Price" class="form-control">
+                        <input asp-for="price" placeholder="Price" class="form-control" type="number">
                     </div>
                     <div class="input-group mb-3">
                         <span class="input-group-text bg-primary">
