--- a/Kursova/Views/Product/UserPurchases.cshtml
+++ b/Kursova/Views/Product/UserPurchases.cshtml
@@ -16,7 +16,7 @@
             <tr>
                 <td>@purchase.Product.title</td>
                 <td>@purchase.Product.price</td>
-                <td>@purchase.CreatedAt.Date</td>
+                <td>@purchase.CreatedAt</td>
             </tr>
         }
         </tbody>
