--- a/Kursova/Views/Shared/_Layout.cshtml
+++ b/Kursova/Views/Shared/_Layout.cshtml
@@ -19,11 +19,7 @@
                 <div class="col-sm-8 col-md-7 py-4">
                     <h4 class="text-white">About</h4>
                     <p class="text-muted">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                        eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                        anim id est laborum.
+                        Description
                     </p>
                 </div>
                 <div class="col-sm-4 offset-md-1 py-4">
@@ -80,7 +76,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2021 - Kursova - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2021 - Kursova 
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
