--- a/Kursova/Views/Users/Edit.cshtml
+++ b/Kursova/Views/Users/Edit.cshtml
@@ -18,21 +18,21 @@
                         <span class="input-group-text bg-primary">
                             <i class="bi bi-person-plus-fill text-white"></i>
                         </span>
-                        <input asp-for="UserName" placeholder="Full Name" class="form-control">
+                        <input asp-for="UserName" placeholder="Full Name" class="form-control" required="required">
                     </div>
 
                     <div class="input-group mt-3">
                         <span class="input-group-text bg-primary">
                             <i class="bi bi-envelope text-white"></i>
                         </span>
-                        <input asp-for="Email" placeholder="Email" class="form-control">
+                        <input asp-for="Email" placeholder="Email" class="form-control" required="required">
                     </div>
 
                     <div class="input-group mt-3">
                         <span class="input-group-text bg-primary">
                             <i class="bi bi-key-fill text-white"></i>
                         </span>
-                        <input asp-for="OldPassword" placeholder="Current Password" class="form-control">
+                        <input asp-for="OldPassword" placeholder="Current Password" class="form-control" required="required">
                     </div>
 
                     <div class="input-group mt-3">
