--- a/Kursova/Views/Admin/CreateUser.cshtml
+++ b/Kursova/Views/Admin/CreateUser.cshtml
@@ -9,7 +9,7 @@
             </div>
             <div class="p-4">
                 <div asp-validation-summary="ModelOnly"></div>
-                <form method="post" asp-controller="Users" asp-action="Create">
+                <form method="post" asp-controller="Admin" asp-action="CreateUser">
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="input-group mb-3">
                         <span class="input-group-text bg-primary">
@@ -28,6 +28,10 @@
                             <i class="bi bi-key-fill text-white"></i>
                         </span>
                         <input asp-for="Password" placeholder="Password" class="form-control">
+                    </div>
+                    <div class="form-check mb-3">
+                        @Html.CheckBoxFor(u=>u.IsAdmin)
+                        <label asp-for="IsAdmin" class="form-check-label" for="IsAdmin"></label>
                     </div>
                     <div class="d-grid mx-auto">
                         <input type="submit" class="btn btn-primary" value="Sign up">
