--- a/Kursova/Views/Admin/PurchaseDashboard.cshtml
+++ b/Kursova/Views/Admin/PurchaseDashboard.cshtml
@@ -2,7 +2,14 @@
 
 
 <div class="container">
-    <h2 class="mt-5">My Purchases</h2>
+    <h2 class="mt-5">Purchase Dashboard</h2>
+    <form method="get">
+        <label for="start" class="text-muted">From:</label>
+        <input type="date" name="start" id="start" class="form-control mb-1">
+        <label for="end" class="text-muted">To:</label>
+        <input type="date" name="end" id="end" class="form-control">
+        <button class="btn btn-outline-dark mt-1">Filter</button>
+    </form>
     <table class="table table-striped">
         <thead>
             <tr>
