--- a/Kursova/Views/Home/Index.cshtml
+++ b/Kursova/Views/Home/Index.cshtml
@@ -7,10 +7,7 @@
     <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">Kursova Store</h1>
-            <p class="lead text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur 
-                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="lead text-muted">Description</p>
         </div>
     </div>
 </section>
@@ -26,7 +23,7 @@
 
                         <div class="card-body">
                             <h5 class="card-title">@product.title</h5>
-                            <p class="card-text">@product.description</p>
+                            <p class="card-text">@product.description.Substring(0,100)...</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     @Html.ActionLink("View", "Details", "Product",
