--- a/Kursova/Views/Home/Index.cshtml
+++ b/Kursova/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
         <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">Kursova Tournaments</h1>
             <p class="lead text-muted">Description</p>
+            <a asp-controller="Admin" asp-action="ResultDashboard" class="btn btn-outline-dark">Result Dashboard</a>
         </div>
     </div>
 </section>
