--- a/Kursova/Views/Game/UserGames.cshtml
+++ b/Kursova/Views/Game/UserGames.cshtml
@@ -7,6 +7,7 @@
         <tr>
             <th>Game</th>
             <th>Number</th>
+            <th>End Time</th>
             <th>Score</th>
         </tr>
         </thead>
@@ -16,6 +17,7 @@
             <tr>
                 <td>@res.Game.title</td>
                 <td>@res.Game.number</td>
+                <td>@res.UserEndTime</td>
                 <td>@res.score</td>
             </tr>
         }
